--- a/apache/rewrite.conf
+++ b/apache/rewrite.conf
@@ -1,4 +1,4 @@
-# Copyright 2020 Cargill Incorporated
+# Copyright 2021-2022 Cargill Incorporated
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,7 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-#jekyll stuff
-.jekyll-cache/
-_userconfig.yml
-_site/
+LoadModule rewrite_module modules/mod_rewrite.so
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^/(.*).md$ /\$1.html [NC,L,R]
