--- a/docker/compose/run-lint.yaml
+++ b/docker/compose/run-lint.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Cargill Incorporated
+# Copyright 2021-2022 Cargill Incorporated
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,7 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-#jekyll stuff
-.jekyll-cache/
-_userconfig.yml
-_site/
+version: "3.7"
+
+services:
+
+  lint-augrim-docs:
+    build:
+      context: ../../
+      dockerfile: ci/lint.dockerfile
+    image: markdownlint
+    volumes:
+      - ../../:/project/
+    command: mdl . -s /root/mdlstyle.rb
