--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -26,7 +26,7 @@ jobs:
       github.event.workflow_run.conclusion == 'success' &&
       github.event.workflow_run.event == 'push' &&
       github.event.workflow_run.head_branch == 'main' &&
-      github.repository_owner == 'augrim'
+      github.repository_owner == 'rbuysse'
     runs-on: ubuntu-latest
     steps:
       - name: Display envvars
